2010-05-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-multiday-view.xml:
	(calendar-event-box.setEditableLabel) set the value of the
	location label if the item contains such a value.

	* src/calendar/base/content/calendar-view-core.xml:
	(calendar-editable-item.eventLocationLabel): new accessor that
	returns the new XUL:element representing the event location.
	(calendar-editable-item.startEditing)
	(calendar-editable-item.stopEditing): hide and show the new event
	location label.

	* src/calendar/base/content/sun-calendar-event-dialog-attendees.js:
	(onAccept): added code to prevent the closing of the window, check
	the freebusy of every attendee and prompt a conflict dialog if
	needed.

	* src/calendar/base/content/calendar-unifinder.js:
	(unifinderKeyPress): see below.

	* src/calendar/base/content/calendar-common-sets.js:
	(calendarController.doCommand): see below.

	* src/calendar/base/content/agenda-listbox.js:
	(agendaListbox.onKeyPress:) prompt a confirmation dialog before
	deleting events.

2010-05-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/sun-calendar-event-dialog-freebusy.xml:
	(freebusy-grid.setRange): new accessor that sets the lower and
	upper limits between which the potential event should fit.
	(freebusy-grid.initTimeRange): decoupled "mStartHour/mEndHour" and
	"mRangeXXXHour/Minute", the former being used only for choosing
	which hours are displayed and the latter being used to determine a
	time range in which the event should fit. They may or may not have
	the same value.

	* src/calendar/base/content/sun-calendar-event-dialog-attendees.js:
	(onLoad): initialize the new time range widgets with the values of
	the event start and end time.
	(onNextSlot): invoke the new "setRange" method on the freebusy
	grid widget with the values corresponding to the current time
	range settings.
	(onTimeRange): new callback for displaying or hiding the time